# tauri-plugin-zustand-storage

./: Cargo.toml  README.md  build.rs  package.json
.changes/: config.json  initial-release.md  readme.md
.github/workflows/: audit.yml  clippy.yml  format.yml  publish.yml  test.yml
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/src/: lib.rs
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: get_item.toml  remove_item.toml  set_item.toml
permissions/schemas/: schema.json
src/: commands.rs  config.rs  desktop.rs  error.rs  lib.rs  mobile.rs  storage.rs
webview-dist/: index.d.ts  index.js
webview-src/: index.ts
