[package]
name = "tauri-plugin-zustand-storage"
version = "0.1.6"
authors = ["Yexiyue <yexiyue666@qq.com>"]
description = "A Tauri plugin for zustand storage"
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-zustand-storage"
license = "MIT"

[dependencies]
tauri = { version = "2.0.0-beta.2" }
serde = "1.0"
thiserror = "1.0"
rocksdb = "0.21.0"

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.1", features = ["build"] }
